<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"

    >

    <group android:checkableBehavior="single" >

        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home"
            android:checked="true"
            />
        <item
            android:id="@+id/nav_lectures"
            android:title="@string/menu_lectures"
            />
<!--        <item-->
<!--            android:id="@+id/nav_sittings"-->
<!--            android:title="@string/menu_sittings" />-->


        <item
            android:id="@+id/nav_tours"
            android:title="@string/menu_tours" >
            <menu>
                <item
                    android:id="@+id/nav_tours_sub1"
                    android:title="@string/menu_walking_tours"
                    />

                <item
                    android:id="@+id/nav_tours_sub2"
                    android:title="@string/menu_tours_institutions"
                    />
            </menu>
        </item>





        <item
            android:id="@+id/nav_vr"
            android:title="@string/menu_vr" >
            <menu>
                <item
                    android:id="@+id/nav_vr_lesson"
                    android:title="@string/menu_vr_lesson"
                    />
                <item
                    android:id="@+id/nav_free_move"
                    android:title="@string/menu_vr_free_move"
                    />
            </menu>
        </item>







    </group>

</menu>
