<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/reset_pass"
    android:layout_height="match_parent"
    tools:context=".ResetPassActivity">


    <!--<ImageButton
        android:id="@+id/backArrow"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:src="@drawable/ic_back"
        android:background="@null"
        android:layout_width="50dp"
        android:layout_height="50dp">

    </ImageButton>-->

    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="121dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:src="@drawable/auth_logo" />

    <TextView
        android:id="@+id/text"
        android:text="@string/reset_pass_text"
        android:textColor="#DDDDDD"
        android:gravity="center"
        android:textSize="22dp"
        android:layout_below="@+id/logo"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <EditText
        android:id="@+id/edEmail"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginBottom="10dp"
        android:layout_below="@+id/text"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="60dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/shape_for_input_auth"
        android:drawableLeft="@drawable/ic_email"
        android:drawablePadding="10dp"
        android:hint="@string/email"
        android:paddingLeft="15dp"
        android:singleLine="true" />

    <ProgressBar
        android:id="@+id/resetPb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edEmail"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"/>

    <Button
        android:id="@+id/restoreBtn"
        android:text="@string/restore"
        android:layout_marginTop="80dp"
        android:textStyle="bold"
        android:layout_below="@+id/edEmail"
        android:textColor="#D01111"
        android:background="@drawable/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

</RelativeLayout>
