<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AuthorizationActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/reg_screen_bcgnd">



            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolBarReg"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:theme="@style/TransparentActionBar" />

            <ImageView
                android:id="@+id/logo"
                android:layout_width="190dp"
                android:layout_height="90dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="80dp"
                android:src="@drawable/auth_logo" />

            <EditText
                android:id="@+id/edLoginReg"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_below="@+id/logo"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="50dp"
                android:background="@drawable/shape_for_input_auth"
                android:drawableLeft="@drawable/ic_person"
                android:drawablePadding="10dp"
                android:hint="@string/auth_login"
                android:paddingLeft="15dp"
                android:singleLine="true" />

            <EditText
                android:id="@+id/edPassReg"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_below="@+id/edLoginReg"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="50dp"
                android:background="@drawable/shape_for_input_auth"
                android:drawableLeft="@drawable/ic_lock"
                android:drawablePadding="10dp"
                android:hint="@string/auth_password"
                android:paddingLeft="15dp"
                android:singleLine="true" />


            <EditText
                android:id="@+id/edEmailReg"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_below="@+id/edPassReg"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="50dp"
                android:background="@drawable/shape_for_input_auth"
                android:drawableLeft="@drawable/ic_email_black_24dp"
                android:drawablePadding="10dp"
                android:hint="@string/email"
                android:paddingLeft="15dp"
                android:singleLine="true" />


            <Button
                android:id="@+id/signUpBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edEmailReg"
                android:layout_marginTop="100dp"
                android:background="@drawable/login_btn"
                android:text="@string/registration"
                android:textColor="#D01111"
                android:textStyle="bold" />

            <ProgressBar
                android:id="@+id/pbReg"
                android:layout_width="70dp"
                android:layout_height="80dp"
                android:layout_below="@+id/edEmailReg"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:visibility="invisible" />
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
